@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Make shakeLint check that the current directory does not change
     Add shakeOutput setting
     Add removeFiles function
     Add Sys module for writing consise system calls
